# summarization

./: .gitignore  CMakeLists.txt  README.md
database/: db_index.txt
database/bl2/: event.txt  index.txt  ms_feature.txt
database/bl2/gt/: 10.txt  11.txt  12.txt  13.txt  15.txt  16.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  27.txt  28.txt  5.txt  6.txt  7.txt
database/bl2/visual_attention_score/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
database/lobby/: event.txt  index.txt  ms_feature.txt
database/lobby/visual_attention_score/: 0.txt  1.txt  2.txt
database/office1/: event.txt  index.txt  ms_feature.txt
database/office1/visual_attention_score/: 0.txt  1.txt  2.txt  3.txt
inc/algorithm/: FeatureDistance.h  FeatureDistanceNorm.h  FeatureExtractor.h  FeatureExtractorCl.h  FeatureExtractorEdge.h  FeatureExtractorLch.h  FeatureExtractorLch3D.h  OnlineCluster.h  OnlineClusterBsas.h  OnlineClusterMog.h  util.h
inc/common/: Keyframe.h  Keyframe.hpp  Segment.h  Segment.hpp  VideoInfo.h  VideoInfo.hpp  util.h  util.hpp
inc/database/: Database.hpp  Dataset.h  Dataset.hpp  event.h  event.hpp
inc/db/: Database.hpp  Dataset.hpp  VideoInfo.hpp
inc/gmm/: Common.h  OnlineCluster.h  OnlineClusterBsas.h  OnlineClusterMog.h  Sender.h  Sensor.h  Server.h  VideoSensor.h  util.h
inc/rpi/common/: Common.h  ConcurrentQueue.h  NetUtil.h  ThreadSender.h
inc/rpi/rpi_hardware/: RpiCamReader.h  RpiHardwareEncoder.h
inc/rpi/rpi_opencv/: RpiVideoCapture.h  RpiVideoWriter.h
lib/: CMakeLists.txt
lib/ilclient/: CMakeLists.txt  ilclient.c  ilclient.h
result/: result_20140325.xlsx
result/keyframe/: bl2_mk_100.txt  bl2_mk_30.txt  bl2_mk_60.txt  bl2_mk_77.txt  bl2_mk_90.txt  bl2_mswave.txt  bl2_rs_100.txt  bl2_rs_70.txt  bl2_sk_100.txt  bl2_sk_50.txt  bl2_sk_77.txt  bl2_us_100.txt  bl2_us_70.txt  bl2_va.txt  lobby_mk_100.txt  lobby_mk_70.txt  lobby_rs_100.txt  lobby_rs_70.txt  lobby_sk_100.txt  lobby_sk_70.txt  lobby_us_100.txt  lobby_us_70.txt  lobby_va.txt  office_mk_100.txt  office_mk_94.txt  office_rs_100.txt  office_rs_94.txt  office_sk_100.txt  office_sk_80.txt  office_us_94.txt  office_va.txt
result/skimming/multiview/: bl2_compress.txt  bl2_d30.txt  bl2_d90.txt  bl2_gmm.txt  bl2_gmm_loss005.txt  bl2_gmm_loss010.txt  bl2_gmm_loss020.txt  bl2_gmm_loss030.txt  bl2_gmm_single.txt  lobby_compress.txt  lobby_d90.txt  lobby_gmm.txt  lobby_gmm_single.txt  lobby_tmm_l1.txt  lobby_tmm_l2.txt  office_compress.txt  office_d90.txt  office_gmm.txt  office_gmm_single.txt  office_tmm.txt
result/skimming/singleview/compress_domain/bl2/: 0.txt  1.txt  10.txt  11.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
result/skimming/singleview/compress_domain/lobby/: 0.txt  1.txt  2.txt
result/skimming/singleview/compress_domain/office/: 0.txt  1.txt  2.txt  3.txt
result/skimming/singleview/gmm/bl2/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
result/skimming/singleview/gmm/lobby/: 0.txt  1.txt  2.txt
result/skimming/singleview/gmm/office/: 0.txt  1.txt  2.txt  3.txt
result/skimming/singleview/tree/d30/bl2/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  2.txt  3.txt  4.txt  (+5 more)
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt  FeatureDistanceConcatNorm.cpp  FeatureDistanceNorm.cpp  FeatureDistance_init.cpp  FeatureExtractorCl.cpp  FeatureExtractorEdge.cpp  FeatureExtractorLch.cpp  FeatureExtractorLch3D.cpp  FeatureExtractor_init.cpp  OnlineClusterBsas.cpp  OnlineClusterMog.cpp  OnlineCluster_init.cpp
src/baseline/: CMakeLists.txt  multi_kmeans.cpp  random_sample.cpp  single_kmeans.cpp  uniform_sample.cpp  va_summary.cpp  visual_attention.cpp
src/baseline_keyframe/: CMakeLists.txt  multi_kmeans.cpp  random_sample.cpp  single_kmeans.cpp  uniform_sample.cpp  va_summary.cpp  visual_attention.cpp
src/baseline_skim/: CMakeLists.txt  compress_domain.cpp  mmr.cpp  tree.cpp
src/common/: CMakeLists.txt  VideoInfo.cpp  util.cpp
src/compress_domain/: CMakeLists.txt  compress_domain.cpp
src/database/: CMakeLists.txt  Database.cpp  Dataset.cpp  eval_multi_view_keyframe.cpp  eval_multi_view_skim.cpp  eval_single_view_skim.cpp
src/gmm/: CMakeLists.txt  Common.cpp  FeatureDistanceConcatNorm.cpp  FeatureDistanceConcatNorm.h  FeatureDistanceNorm.cpp  FeatureDistance_init.cpp  FeatureExtractorCl.cpp  FeatureExtractorEdge.cpp  FeatureExtractor_init.cpp  OnlineClusterBsas.cpp  OnlineClusterBsas.h  OnlineClusterMog.cpp  OnlineCluster_init.cpp  Sensor.cpp  Server.cpp  Server.h  Shot.h  VideoSensor.cpp  VideoSensor.h  gmm_inter_view.cpp  gmm_intra_view.cpp  multi_view.cpp  single_view.cpp  single_view2.cpp  util.cpp
src/mmr/: CMakeLists.txt  mmr.cpp
src/mswave/: CMakeLists.txt  mswave_feature.cpp
src/rpi/: CMakeLists.txt
src/rpi/common/: CMakeLists.txt  ConcurrentQueue.cpp  NetUtil.cpp
src/rpi/rpi/: CMakeLists.txt  RpiCamReader.cpp  RpiHardwareEncoder.cpp
src/rpi/rpi_hardware/: CMakeLists.txt  RpiCamReader.cpp  RpiHardwareEncoder.cpp
src/rpi/rpi_opencv/: CMakeLists.txt  RpiVideoCapture.cpp  RpiVideoWriter.cpp
src/rpi/sensor/: CMakeLists.txt  OnlineClusterMog.cpp  gmm_single_view.cpp  rpi_sensor.cpp  sensor.cpp  summarization.cpp
src/rpi/server/: CMakeLists.txt  StreamThread.cpp  rpi_post_proc.cpp  rpi_server.cpp  server.cpp
src/rpi/test/: CMakeLists.txt  RpiTest.cpp
src/test/: CMakeLists.txt  db_test.cpp
src/tool/: CMakeLists.txt  concat_single_view_skim.cpp  eval_keyframe.cpp  eval_multi_view_skim.cpp  eval_single_view_skim.cpp  event_player.cpp  frame_diff.cpp  generate_keyframe.cpp  mswave_feature.cpp  multi_kmeans.cpp  old_event_player.cpp  random_sample.cpp  single_kmeans.cpp  uniform_sample.cpp  va_summary.cpp  visual_attention.cpp
src/tree/: CMakeLists.txt  FeatureExtractorLch.cpp  FeatureExtractorLch3D.cpp  FeatureExtractorLch3D.h  main.cpp  tree.cpp
(+33 files in other folders)
